# test

./: CMakeLists.txt  Makefile  MatrixStation.cpp  Route.cpp  Route_management.cpp  RusRails.h  Source.cpp  Station.cpp  Station_management.cpp  Tickets_management.cpp  Train.cpp  Train_managment.cpp  database.cpp  database.h  menu.cpp  menu.h  tickets.cpp
lab2.1/: Makefile  main.cpp  rzhd
lab2.1/include/: database.h  menu.h  passenger.h  route.h  station.h  ticket.h  train.h
lab2.1/src/: database.cpp  menu.cpp  passenger.cpp  route.cpp  station.cpp  ticket.cpp  train.cpp
src/: DatabaseManager.cpp  DatabaseManager.h  Direction.cpp  Direction.h  Simulation.cpp  Simulation.h  Ticket.cpp  Ticket.h  Train.cpp  Train.h  main.cpp
