cmake_minimum_required(VERSION 3.25)
project(untitled8)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laba2
        RusRails.h
        Source.cpp
        Station.cpp
        Station_management.cpp
        Route.cpp
        Route_management.cpp
        Train.cpp
        Train_managment.cpp
        Tickets_management.cpp
        MatrixStation.cpp
        Route.cpp
        tickets.cpp
)